* fix alignment a little bit

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -134,7 +134,7 @@ $size-4: 1.5rem !default
   }
 
   .navbar-menu {
-    margin-left: 1rem;
+    margin-left: 1.5rem;
   }
 }
 
@@ -164,18 +164,13 @@ footer, .push {
 
 
 .video-item {
-  width: 60rem;
-  height: 30rem;
+  width: 48rem;
+  height: 27rem;
   margin-bottom: 2rem;
 
-
-  @media (max-width: $widescreen) {
-    width: 50rem;
-    height: 25rem;
-  }
   @media (max-width: $desktop) {
-    width: 25rem;
-    height: 12.5rem;
+    width: 24rem;
+    height: 13.5rem;
     margin-bottom: 4rem;
   }
 }
